@@ -466,10 +466,10 @@ struct game games[] = {
     type                : AAO_SERVER,
     flags               : GAME_CONNECT | GAME_SPECTATE | GAME_PASSWORD | GAME_LAUNCH_HOSTPORT,
     name                : "America's Army",
-    default_port        : 7777,
+    default_port        : 1716,
     id                  : "AMS",
-    qstat_str           : "UNS",
-    qstat_option        : "-uns",
+    qstat_str           : "AMS",
+    qstat_option        : "-ams",
     icon                : "aao_xpm",
     parse_player        : un_parse_player,
     parse_server        : quake_parse_server,
