@@ -31,3 +31,12 @@ gametype CODM new extend Q3M
     master for gametype = CODS
     master query = full empty
 end
+# Americas Army 2.1
+gametype AMS new extend GS2
+   name = America's Army 2.1
+   default port = 1716
+   status port offset = 1
+   template var = AMERICASARMY
+   game rule = gametype
+end
+
